# my-command-center

./: .gitignore  AGENTS.md  README.md  design.pen  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.a5c/: package.json  project-profile.json  project-profile.md  quality-gates.json
.github/workflows/: ci-comment.yml  ci.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: configurable-actions.md
.sisyphus/evidence/: final-summary.txt  (+7 more)
scripts/: install-mac.sh  install.sh  tauri-dev-env.mjs  tauri-dev-env.test.mjs  tauri-dev.mjs
src/: App.svelte  App.test.ts  app.css
src-tauri/: Cargo.toml
src-tauri/src/: agent_coordinator.rs  claude_hooks.rs  claude_sdk_protocol.rs  command_discovery.rs  db.rs  diff_parser.rs  github_client.rs  github_poller.rs  http_server.rs  jira_sync.rs  main.rs  mcp_installer.rs  opencode_client.rs  orchestrator.rs  plugin_host.rs  plugin_installer.rs  plugin_rpc.rs  pty_manager.rs  server_manager.rs  shepherd_agent.rs  sse_bridge.rs  whisper_manager.rs
src-tauri/src/commands/: action_items.rs  agent_review.rs  authored_prs.rs  config.rs  github.rs  jira.rs  mod.rs  opencode.rs  orchestration.rs  pty.rs  review.rs  self_review.rs  tasks.rs
src-tauri/src/db/: agents.rs  migrations.rs  mod.rs  plugins.rs  projects.rs  pull_requests.rs  tasks.rs  worktrees.rs
src-tauri/src/github_client/: error.rs  mod.rs  pulls.rs  reviews.rs  types.rs
src-tauri/src/mcp-server/: cli.js  index.js  openforge-skill.md  package.json
src-tauri/src/providers/: claude_code.rs  mod.rs  opencode.rs
(+188 files in other folders)
